--- a/src/layouts/main/pages/AddMain/css/JobInfomation.css
+++ b/src/layouts/main/pages/AddMain/css/JobInfomation.css
@@ -52,3 +52,6 @@
 :deep(.ant-select:not(.ant-select-customize-input) .ant-select-selector){
     width: 440px;
 }
+.list-checkbox li {
+    margin-left: 15px !important;
+}
