--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,1 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
+.ant-modal-header{
+    background: #069255 !important;
+    
+}
+
+.ant-modal-title {
+    color: white !important;
+}
+.ant-modal-body {
+    padding: 0 !important;
+  }
