--- a/src/layouts/main/pages/AddMain/css/JobInfomation.css
+++ b/src/layouts/main/pages/AddMain/css/JobInfomation.css
@@ -52,6 +52,9 @@
 :deep(.ant-select:not(.ant-select-customize-input) .ant-select-selector){
     width: 440px;
 }
+:deep(.ant-checkbox-wrapper + .ant-checkbox-wrapper){
+    margin-left: 0px;
+}
 .list-checkbox li {
     margin-left: 15px !important;
 }
