--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,13 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 
-.ant-modal-header{
-    background: #069255 !important;
-    
+.ant-modal-header {
+  background: #069255 !important;
 }
 
 .ant-modal-title {
-    color: white !important;
+  color: white !important;
 }
 .ant-modal-body {
-    padding: 0 !important;
-  }
+  padding: 0 !important;
+}
+
+.ant-radio-checked .ant-radio-inner {
+  border-color: #069255 !important;
+}
+
+.ant-radio-inner::after {
+  background-color: #069255 !important;
+}
+
+.ant-modal-title {
+  text-align: center;
+}
